--- a/src/index.css
+++ b/src/index.css
@@ -150,8 +150,8 @@ nav ul > li > h3:not(.active):hover {
 }
 .card > img {
 	object-fit: cover;
-	width: 192px;
-	height: 300px;
+	width: 100%;
+	height: 100%;
 	border: solid 4px #c3e2c2;
 	border-radius: 20px;
 	position: absolute;
@@ -188,10 +188,10 @@ nav ul > li > h3:not(.active):hover {
 	text-align: left !important;
 }
 .card:hover .cardText {
-	width: 96%;
-	height: 98%;
-	transform: translateY(2%);
-	margin: -2px 0px 0px 4px;
+	width: 100%;
+	height: 100%;
+	transform: translateY(0%);
+	margin: 0px;
 	border-radius: 17px;
 }
 /*-------------MAPBOX------------------------*/
